[project]
name = "japila-books"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    # hot reloading does not work with click 8.3.0+
    "click<8.3.0",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-minify-plugin>=0.7.2",
    "mkdocs-redirects>=1.2.1",
    "zensical>=0.0.7",
]
